# Dev05-monitoring-dashboard

./: README.md
.claude/: settings.json
document-uploader-master/: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
document-uploader-master/.ai-dlc-bootstrap/: manifest.json
document-uploader-master/.ai-dlc-bootstrap/scaffold/: scaffold.js
document-uploader-master/.claude/: settings.json
document-uploader-master/aidlc-docs/: aidlc-state.md  audit.md
document-uploader-master/aidlc-inputs/: tech-environment.md  vision.md
document-uploader-master/harness/: README.md
document-uploader-master/libs/data-access/py/: pyproject.toml
document-uploader-master/libs/data-access/py/data_access/: __init__.py  _dynamo.py  _idempotency.py
document-uploader-master/libs/data-access/py/data_access/auditevents/: __init__.py
document-uploader-master/libs/data-access/py/data_access/batches/: __init__.py
document-uploader-master/libs/data-access/py/data_access/contenthashes/: __init__.py
document-uploader-master/libs/data-access/py/data_access/documents/: __init__.py
document-uploader-master/libs/data-access/py/data_access/pipelinefiles/: __init__.py
document-uploader-master/libs/data-access/py/data_access/tasktokens/: __init__.py
document-uploader-master/libs/data-access/py/data_access/workspaces/: __init__.py
document-uploader-master/libs/data-access/py/tests/: test_auditevents.py  test_batches.py  test_contenthashes.py  test_documents.py  test_idempotency.py  test_pipelinefiles.py  test_tasktokens.py  test_workspaces.py
document-uploader-master/scripts/: build-all-images.sh  build-image.sh  deploy-dev05.sh  revert-phase-b.sh
document-uploader-master/units/office-conversion-aspose-container/: .dockerignore  CMakeLists.txt  Dockerfile.test  Makefile  conanfile.txt
document-uploader-master/units/office-conversion-aspose-container/helm/: Chart.yaml  values.yaml
document-uploader-master/units/office-conversion-aspose-container/helm/templates/: manifests.yaml
document-uploader-master/units/office-conversion-aspose-container/include/: render.h
document-uploader-master/units/office-conversion-aspose-container/src/: main.cpp  render.cpp
document-uploader-master/units/office-conversion-aspose-container/tests/: CMakeLists.txt  render_test.cpp
document-uploader-master/units/office-conversion-orchestrator-sidecar/: pyproject.toml
document-uploader-master/units/office-conversion-orchestrator-sidecar/helm/: Chart.yaml  values.yaml
document-uploader-master/units/office-conversion-orchestrator-sidecar/helm/templates/: manifests.yaml
document-uploader-master/units/office-conversion-orchestrator-sidecar/src/office_conversion_orchestrator_sidecar/: __init__.py  __main__.py
document-uploader-master/units/pdf-processing-service/: pyproject.toml
document-uploader-master/units/pdf-processing-service/helm/: Chart.yaml  values.yaml
document-uploader-master/units/pdf-processing-service/src/pdf_processing_service/: __init__.py  __main__.py
(+394 files in other folders)
