[project]
name = "office-conversion-orchestrator-sidecar"
version = "0.1.0"
description = "Orchestrator sidecar: chunks office docs, calls localhost Aspose container, merges via qpdf"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "httpx>=0.27",
    "structlog>=24.4",
    "docuploader-data-access",
]

[tool.uv.sources]
docuploader-data-access = { path = "../../libs/data-access/py", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/office_conversion_orchestrator_sidecar"]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "allure-pytest>=2",
]
