[project]
name = "pdf-processing-service"
version = "0.1.0"
description = "PDF repair, page-level ops, and OCR text-layer assembly"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "pikepdf>=9.0",
    "pymupdf>=1.24",
    "structlog>=24.4",
    "docuploader-data-access",
]

[tool.uv.sources]
docuploader-data-access = { path = "../../libs/data-access/py", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_processing_service"]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "allure-pytest>=2",
]
