[project]
name = "docuploader-data-access"
version = "0.1.0"
description = "Typed data-access library for docuploader DynamoDB tables (Python)"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_access"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "allure-pytest>=2",
]
